content/_generated-doc/3.0/config/quarkus-grpc-general-config-items.adoc

:summaryTableId: quarkus-grpc-general-config-items
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-grpc-general-config-items_configuration]]link:#quarkus-grpc-general-config-items_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-grpc-general-config-items_quarkus.grpc.dev-mode.force-server-start]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.dev-mode.force-server-start[quarkus.grpc.dev-mode.force-server-start]`

[.description]
--
Start gRPC server in dev mode even if no gRPC services are implemented. By default set to `true` to ease incremental development of new services using dev mode.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_DEV_MODE_FORCE_SERVER_START+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_DEV_MODE_FORCE_SERVER_START+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


h|[[quarkus-grpc-general-config-items_quarkus.grpc.clients-configures-the-grpc-clients]]link:#quarkus-grpc-general-config-items_quarkus.grpc.clients-configures-the-grpc-clients[Configures the gRPC clients]

h|Type
h|Default

a| [[quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.use-quarkus-grpc-client]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.use-quarkus-grpc-client[quarkus.grpc.clients."client-name".use-quarkus-grpc-client]`

[.description]
--
Use new Vert.x gRPC client support. By default, we still use previous Java gRPC support.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__USE_QUARKUS_GRPC_CLIENT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__USE_QUARKUS_GRPC_CLIENT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.xds.enabled]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.xds.enabled[quarkus.grpc.clients."client-name".xds.enabled]`

[.description]
--
Explicitly enable use of XDS.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__XDS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__XDS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.xds.secure]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.xds.secure[quarkus.grpc.clients."client-name".xds.secure]`

[.description]
--
Use secure credentials.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__XDS_SECURE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__XDS_SECURE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.xds.target]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.xds.target[quarkus.grpc.clients."client-name".xds.target]`

[.description]
--
Optional explicit target.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__XDS_TARGET+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__XDS_TARGET+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.port]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.port[quarkus.grpc.clients."client-name".port]`

[.description]
--
The gRPC service port.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`9000`


a| [[quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.host]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.host[quarkus.grpc.clients."client-name".host]`

[.description]
--
The host name / IP on which the service is exposed.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__HOST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__HOST+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.ssl.certificate]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.ssl.certificate[quarkus.grpc.clients."client-name".ssl.certificate]`

[.description]
--
The classpath path or file path to a server certificate or certificate chain in PEM format.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__SSL_CERTIFICATE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__SSL_CERTIFICATE+++`
endif::add-copy-button-to-env-var[]
--|path 
|


a| [[quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.ssl.key]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.ssl.key[quarkus.grpc.clients."client-name".ssl.key]`

[.description]
--
The classpath path or file path to the corresponding certificate private key file in PEM format.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__SSL_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__SSL_KEY+++`
endif::add-copy-button-to-env-var[]
--|path 
|


a| [[quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.ssl.trust-store]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.ssl.trust-store[quarkus.grpc.clients."client-name".ssl.trust-store]`

[.description]
--
An optional trust store which holds the certificate information of the certificates to trust The trust store can be either on classpath or in an external file.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__SSL_TRUST_STORE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__SSL_TRUST_STORE+++`
endif::add-copy-button-to-env-var[]
--|path 
|


a| [[quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.name-resolver]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.name-resolver[quarkus.grpc.clients."client-name".name-resolver]`

[.description]
--
Use a name resolver. Defaults to dns. If set to "stork", host will be treated as SmallRye Stork service name

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__NAME_RESOLVER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__NAME_RESOLVER+++`
endif::add-copy-button-to-env-var[]
--|string 
|`dns`


a| [[quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.plain-text]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.plain-text[quarkus.grpc.clients."client-name".plain-text]`

[.description]
--
Whether `plain-text` should be used instead of `TLS`. Enabled by default, except if TLS/SSL is configured. In this case, `plain-text` is disabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__PLAIN_TEXT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__PLAIN_TEXT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.keep-alive-time]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.keep-alive-time[quarkus.grpc.clients."client-name".keep-alive-time]`

[.description]
--
The duration after which a keep alive ping is sent.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__KEEP_ALIVE_TIME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__KEEP_ALIVE_TIME+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.flow-control-window]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.flow-control-window[quarkus.grpc.clients."client-name".flow-control-window]`

[.description]
--
The flow control window in bytes. Default is 1MiB.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__FLOW_CONTROL_WINDOW+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__FLOW_CONTROL_WINDOW+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.idle-timeout]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.idle-timeout[quarkus.grpc.clients."client-name".idle-timeout]`

[.description]
--
The duration without ongoing RPCs before going to idle mode.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__IDLE_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__IDLE_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.keep-alive-timeout]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.keep-alive-timeout[quarkus.grpc.clients."client-name".keep-alive-timeout]`

[.description]
--
The amount of time the sender of a keep alive ping waits for an acknowledgement.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__KEEP_ALIVE_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__KEEP_ALIVE_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.keep-alive-without-calls]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.keep-alive-without-calls[quarkus.grpc.clients."client-name".keep-alive-without-calls]`

[.description]
--
Whether keep-alive will be performed when there are no outstanding RPC on a connection.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__KEEP_ALIVE_WITHOUT_CALLS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__KEEP_ALIVE_WITHOUT_CALLS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.max-hedged-attempts]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.max-hedged-attempts[quarkus.grpc.clients."client-name".max-hedged-attempts]`

[.description]
--
The max number of hedged attempts.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__MAX_HEDGED_ATTEMPTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__MAX_HEDGED_ATTEMPTS+++`
endif::add-copy-button-to-env-var[]
--|int 
|`5`


a| [[quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.max-retry-attempts]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.max-retry-attempts[quarkus.grpc.clients."client-name".max-retry-attempts]`

[.description]
--
The max number of retry attempts. Retry must be explicitly enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__MAX_RETRY_ATTEMPTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__MAX_RETRY_ATTEMPTS+++`
endif::add-copy-button-to-env-var[]
--|int 
|`5`


a| [[quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.max-trace-events]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.max-trace-events[quarkus.grpc.clients."client-name".max-trace-events]`

[.description]
--
The maximum number of channel trace events to keep in the tracer for each channel or sub-channel.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__MAX_TRACE_EVENTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__MAX_TRACE_EVENTS+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.max-inbound-message-size]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.max-inbound-message-size[quarkus.grpc.clients."client-name".max-inbound-message-size]`

[.description]
--
The maximum message size allowed for a single gRPC frame (in bytes). Default is 4 MiB.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__MAX_INBOUND_MESSAGE_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__MAX_INBOUND_MESSAGE_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.max-inbound-metadata-size]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.max-inbound-metadata-size[quarkus.grpc.clients."client-name".max-inbound-metadata-size]`

[.description]
--
The maximum size of metadata allowed to be received (in bytes). Default is 8192B.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__MAX_INBOUND_METADATA_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__MAX_INBOUND_METADATA_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.negotiation-type]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.negotiation-type[quarkus.grpc.clients."client-name".negotiation-type]`

[.description]
--
The negotiation type for the HTTP/2 connection. Accepted values are: `TLS`, `PLAINTEXT_UPGRADE`, `PLAINTEXT`

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__NEGOTIATION_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__NEGOTIATION_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|`TLS`


a| [[quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.override-authority]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.override-authority[quarkus.grpc.clients."client-name".override-authority]`

[.description]
--
Overrides the authority used with TLS and HTTP virtual hosting.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__OVERRIDE_AUTHORITY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__OVERRIDE_AUTHORITY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.per-rpc-buffer-limit]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.per-rpc-buffer-limit[quarkus.grpc.clients."client-name".per-rpc-buffer-limit]`

[.description]
--
The per RPC buffer limit in bytes used for retry.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__PER_RPC_BUFFER_LIMIT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__PER_RPC_BUFFER_LIMIT+++`
endif::add-copy-button-to-env-var[]
--|long 
|


a| [[quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.retry]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.retry[quarkus.grpc.clients."client-name".retry]`

[.description]
--
Whether retry is enabled. Note that retry is disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__RETRY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__RETRY+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.retry-buffer-size]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.retry-buffer-size[quarkus.grpc.clients."client-name".retry-buffer-size]`

[.description]
--
The retry buffer size in bytes.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__RETRY_BUFFER_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__RETRY_BUFFER_SIZE+++`
endif::add-copy-button-to-env-var[]
--|long 
|


a| [[quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.user-agent]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.user-agent[quarkus.grpc.clients."client-name".user-agent]`

[.description]
--
Use a custom user-agent.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__USER_AGENT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__USER_AGENT+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.load-balancing-policy]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.load-balancing-policy[quarkus.grpc.clients."client-name".load-balancing-policy]`

[.description]
--
Use a custom load balancing policy. Accepted values are: `pick_value`, `round_robin`, `grpclb`. This value is ignored if name-resolver is set to 'stork'.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__LOAD_BALANCING_POLICY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__LOAD_BALANCING_POLICY+++`
endif::add-copy-button-to-env-var[]
--|string 
|`pick_first`


a| [[quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.compression]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.compression[quarkus.grpc.clients."client-name".compression]`

[.description]
--
The compression to use for each call. The accepted values are `gzip` and `identity`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__COMPRESSION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__COMPRESSION+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.deadline]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.clients.-client-name-.deadline[quarkus.grpc.clients."client-name".deadline]`

[.description]
--
The deadline used for each call. 
The format uses the standard `java.time.Duration` format. You can also provide duration values starting with a number. In this case, if the value consists only of a number, the converter treats the value as seconds. Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__DEADLINE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__DEADLINE+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


h|[[quarkus-grpc-general-config-items_quarkus.grpc.server-configure-the-grpc-server]]link:#quarkus-grpc-general-config-items_quarkus.grpc.server-configure-the-grpc-server[Configure the gRPC server]

h|Type
h|Default

a| [[quarkus-grpc-general-config-items_quarkus.grpc.server.use-separate-server]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.server.use-separate-server[quarkus.grpc.server.use-separate-server]`

[.description]
--
Do we use separate HTTP server to serve gRPC requests. Set this to false if you want to use new Vert.x gRPC support, which uses existing Vert.x HTTP server.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_USE_SEPARATE_SERVER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_USE_SEPARATE_SERVER+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-grpc-general-config-items_quarkus.grpc.server.xds.enabled]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.server.xds.enabled[quarkus.grpc.server.xds.enabled]`

[.description]
--
Explicitly enable use of XDS.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_XDS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_XDS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-grpc-general-config-items_quarkus.grpc.server.xds.secure]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.server.xds.secure[quarkus.grpc.server.xds.secure]`

[.description]
--
Use secure credentials.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_XDS_SECURE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_XDS_SECURE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-grpc-general-config-items_quarkus.grpc.server.port]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.server.port[quarkus.grpc.server.port]`

[.description]
--
The gRPC Server port.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`9000`


a| [[quarkus-grpc-general-config-items_quarkus.grpc.server.test-port]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.server.test-port[quarkus.grpc.server.test-port]`

[.description]
--
The gRPC Server port used for tests.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_TEST_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_TEST_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`9001`


a| [[quarkus-grpc-general-config-items_quarkus.grpc.server.host]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.server.host[quarkus.grpc.server.host]`

[.description]
--
The gRPC server host.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_HOST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_HOST+++`
endif::add-copy-button-to-env-var[]
--|string 
|`0.0.0.0`


a| [[quarkus-grpc-general-config-items_quarkus.grpc.server.handshake-timeout]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.server.handshake-timeout[quarkus.grpc.server.handshake-timeout]`

[.description]
--
The gRPC handshake timeout.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_HANDSHAKE_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_HANDSHAKE_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-grpc-general-config-items_quarkus.grpc.server.max-inbound-message-size]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.server.max-inbound-message-size[quarkus.grpc.server.max-inbound-message-size]`

[.description]
--
The max inbound message size in bytes.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_MAX_INBOUND_MESSAGE_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_MAX_INBOUND_MESSAGE_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-grpc-general-config-items_quarkus.grpc.server.max-inbound-metadata-size]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.server.max-inbound-metadata-size[quarkus.grpc.server.max-inbound-metadata-size]`

[.description]
--
The max inbound metadata size in bytes

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_MAX_INBOUND_METADATA_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_MAX_INBOUND_METADATA_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-grpc-general-config-items_quarkus.grpc.server.ssl.certificate]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.server.ssl.certificate[quarkus.grpc.server.ssl.certificate]`

[.description]
--
The classpath path or file path to a server certificate or certificate chain in PEM format.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_SSL_CERTIFICATE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_SSL_CERTIFICATE+++`
endif::add-copy-button-to-env-var[]
--|path 
|


a| [[quarkus-grpc-general-config-items_quarkus.grpc.server.ssl.key]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.server.ssl.key[quarkus.grpc.server.ssl.key]`

[.description]
--
The classpath path or file path to the corresponding certificate private key file in PEM format.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_SSL_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_SSL_KEY+++`
endif::add-copy-button-to-env-var[]
--|path 
|


a| [[quarkus-grpc-general-config-items_quarkus.grpc.server.ssl.key-store]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.server.ssl.key-store[quarkus.grpc.server.ssl.key-store]`

[.description]
--
An optional key store which holds the certificate information instead of specifying separate files. The key store can be either on classpath or an external file.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_SSL_KEY_STORE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_SSL_KEY_STORE+++`
endif::add-copy-button-to-env-var[]
--|path 
|


a| [[quarkus-grpc-general-config-items_quarkus.grpc.server.ssl.key-store-type]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.server.ssl.key-store-type[quarkus.grpc.server.ssl.key-store-type]`

[.description]
--
An optional parameter to specify the type of the key store file. If not given, the type is automatically detected based on the file name.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_SSL_KEY_STORE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_SSL_KEY_STORE_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-grpc-general-config-items_quarkus.grpc.server.ssl.key-store-password]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.server.ssl.key-store-password[quarkus.grpc.server.ssl.key-store-password]`

[.description]
--
A parameter to specify the password of the key store file. If not given, the default ("password") is used.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_SSL_KEY_STORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_SSL_KEY_STORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|`password`


a| [[quarkus-grpc-general-config-items_quarkus.grpc.server.ssl.trust-store]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.server.ssl.trust-store[quarkus.grpc.server.ssl.trust-store]`

[.description]
--
An optional trust store which holds the certificate information of the certificates to trust The trust store can be either on classpath or an external file.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_SSL_TRUST_STORE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_SSL_TRUST_STORE+++`
endif::add-copy-button-to-env-var[]
--|path 
|


a| [[quarkus-grpc-general-config-items_quarkus.grpc.server.ssl.trust-store-type]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.server.ssl.trust-store-type[quarkus.grpc.server.ssl.trust-store-type]`

[.description]
--
An optional parameter to specify type of the trust store file. If not given, the type is automatically detected based on the file name.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_SSL_TRUST_STORE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_SSL_TRUST_STORE_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-grpc-general-config-items_quarkus.grpc.server.ssl.trust-store-password]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.server.ssl.trust-store-password[quarkus.grpc.server.ssl.trust-store-password]`

[.description]
--
A parameter to specify the password of the trust store file.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_SSL_TRUST_STORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_SSL_TRUST_STORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-grpc-general-config-items_quarkus.grpc.server.ssl.cipher-suites]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.server.ssl.cipher-suites[quarkus.grpc.server.ssl.cipher-suites]`

[.description]
--
The cipher suites to use. If none is given, a reasonable default is selected.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_SSL_CIPHER_SUITES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_SSL_CIPHER_SUITES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-grpc-general-config-items_quarkus.grpc.server.ssl.protocols]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.server.ssl.protocols[quarkus.grpc.server.ssl.protocols]`

[.description]
--
The list of protocols to explicitly enable.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_SSL_PROTOCOLS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_SSL_PROTOCOLS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`TLSv1.3,TLSv1.2`


a| [[quarkus-grpc-general-config-items_quarkus.grpc.server.ssl.client-auth]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.server.ssl.client-auth[quarkus.grpc.server.ssl.client-auth]`

[.description]
--
Configures the engine to require/request client authentication. NONE, REQUEST, REQUIRED

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_SSL_CLIENT_AUTH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_SSL_CLIENT_AUTH+++`
endif::add-copy-button-to-env-var[]
-- a|
`none`, `request`, `required` 
|`none`


a| [[quarkus-grpc-general-config-items_quarkus.grpc.server.plain-text]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.server.plain-text[quarkus.grpc.server.plain-text]`

[.description]
--
Disables SSL, and uses plain text instead. If disabled, configure the ssl configuration.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_PLAIN_TEXT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_PLAIN_TEXT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-grpc-general-config-items_quarkus.grpc.server.alpn]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.server.alpn[quarkus.grpc.server.alpn]`

[.description]
--
Whether ALPN should be used.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_ALPN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_ALPN+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-grpc-general-config-items_quarkus.grpc.server.transport-security.certificate]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.server.transport-security.certificate[quarkus.grpc.server.transport-security.certificate]`

[.description]
--
The path to the certificate file.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_TRANSPORT_SECURITY_CERTIFICATE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_TRANSPORT_SECURITY_CERTIFICATE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-grpc-general-config-items_quarkus.grpc.server.transport-security.key]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.server.transport-security.key[quarkus.grpc.server.transport-security.key]`

[.description]
--
The path to the private key file.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_TRANSPORT_SECURITY_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_TRANSPORT_SECURITY_KEY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-grpc-general-config-items_quarkus.grpc.server.enable-reflection-service]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.server.enable-reflection-service[quarkus.grpc.server.enable-reflection-service]`

[.description]
--
Enables the gRPC Reflection Service. By default, the reflection service is only exposed in `dev` mode. This setting allows overriding this choice and enable the reflection service every time.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_ENABLE_REFLECTION_SERVICE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_ENABLE_REFLECTION_SERVICE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-grpc-general-config-items_quarkus.grpc.server.instances]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.server.instances[quarkus.grpc.server.instances]`

[.description]
--
Number of gRPC server verticle instances. This is useful for scaling easily across multiple cores. The number should not exceed the amount of event loops.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_INSTANCES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_INSTANCES+++`
endif::add-copy-button-to-env-var[]
--|int 
|`1`


a| [[quarkus-grpc-general-config-items_quarkus.grpc.server.netty.keep-alive-time]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.server.netty.keep-alive-time[quarkus.grpc.server.netty.keep-alive-time]`

[.description]
--
Sets a custom keep-alive duration. This configures the time before sending a `keepalive` ping when there is no read activity.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_NETTY_KEEP_ALIVE_TIME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_NETTY_KEEP_ALIVE_TIME+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-grpc-general-config-items_quarkus.grpc.server.compression]]`link:#quarkus-grpc-general-config-items_quarkus.grpc.server.compression[quarkus.grpc.server.compression]`

[.description]
--
gRPC compression, e.g. "gzip"

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_COMPRESSION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_COMPRESSION+++`
endif::add-copy-button-to-env-var[]
--|string 
|

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
